human-intervention-logs/io.opentelemetry:opentelemetry-exporter-common:1.28.0/gradle-test/gradle-test-2026-05-03T13-38-20-086049Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: io.opentelemetry:opentelemetry-exporter-common:1.28.0
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 10 busy and 1 incompatible and 153 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/tests/src/io.opentelemetry/opentelemetry-exporter-common/1.28.0/src/test/java/io_opentelemetry/opentelemetry_exporter_common/RetryUtilTest.java:13: error: cannot find symbol

import io.opentelemetry.exporter.internal.retry.RetryPolicy;
> Task :compileTestJava FAILED
                                               ^

  symbol:   class RetryPolicy
[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/tests/src/io.opentelemetry/opentelemetry-exporter-common/1.28.0/build/reports/problems/problems-report.html
  location: package io.opentelemetry.exporter.internal.retry
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/tests/src/io.opentelemetry/opentelemetry-exporter-common/1.28.0/src/test/java/io_opentelemetry/opentelemetry_exporter_common/RetryUtilTest.java:38: error: cannot find symbol
                        () -> RetryUtil.setRetryPolicyOnDelegate(holder, RetryPolicy.getDefault()))
                                                                         ^
  symbol:   variable RetryPolicy
  location: class RetryUtilTest
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/tests/src/io.opentelemetry/opentelemetry-exporter-common/1.28.0/src/test/java/io_opentelemetry/opentelemetry_exporter_common/RetryUtilTest.java:13: error: cannot find symbol
  import io.opentelemetry.exporter.internal.retry.RetryPolicy;
                                                 ^
    symbol:   class RetryPolicy
    location: package io.opentelemetry.exporter.internal.retry
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/tests/src/io.opentelemetry/opentelemetry-exporter-common/1.28.0/src/test/java/io_opentelemetry/opentelemetry_exporter_common/RetryUtilTest.java:38: error: cannot find symbol
                          () -> RetryUtil.setRetryPolicyOnDelegate(holder, RetryPolicy.getDefault()))
                                                                           ^
    symbol:   variable RetryPolicy
    location: class RetryUtilTest
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan
 to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.
BUILD FAILED in 12s

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2565-d995892e/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for io.opentelemetry:opentelemetry-exporter-common:1.28.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 14s
9 actionable tasks: 1 executed, 8 up-to-date
